--- a/public/css/style.css
+++ b/public/css/style.css
@@ -182,6 +182,13 @@
     padding: 10px;
     flex: 50%;
 }
+
+@media (max-width: 800px) {
+    .header-img {
+        display: none;
+    }
+
+}
   
 .m-o-s {
     padding: 20px;
