--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,11 +29,6 @@
     padding: 10px;
     height: 90px;
     align-items: center;
-    justify-items: center;
-    overflow: hidden;
-    /* box-shadow: 0 3px 2px -2px rgb(170, 167, 167);  */
-    /* margin-bottom: 60px; */
-    /* position: fixed; */
 }
 .navigation_container a{
   color: #4b4c4d;
@@ -61,7 +56,7 @@
 }
 
 .menu li {
-    margin-left: 25px;
+    margin-left: 5%;
 }
 
 .menu a {
